--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 #root {
-    max-width: 1280px;
+    /* max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
-    text-align: center;
+    text-align: center; */
+    /* background: linear-gradient(120deg, #FF4066, #FFF16A); */
+   
   }
+
   
