--- a/src/pages/Home/ContentBanner/styles.scss
+++ b/src/pages/Home/ContentBanner/styles.scss
@@ -2,7 +2,9 @@
 .heroBanner {
     width: 100%;
     height: 450px;
-    background-color: var(--black);
+   
+           
+    
     display: flex;
     align-items: center;
     position: relative;
@@ -32,11 +34,13 @@
     .opacity-layer {
         width: 100%;
         height: 250px;
-        background: linear-gradient(
-            180deg,
-            rgba(4, 21, 45, 0) 0%,
-            #04152d 79.17%
-        );
+        // background: linear-gradient(
+        //     180deg,
+        //     rgba(4, 21, 45, 0) 0%,
+        //     #FF4066 79.17%
+        // );
+      
+     
         position: absolute;
         bottom: 0;
         left: 0;
